fix general scss ( white spaces, var names, links)

--- a/client/src/App/App.scss
+++ b/client/src/App/App.scss
@@ -50,4 +50,5 @@
 }
 .title {
   text-align: center;
+  margin: 3rem auto 2rem; // white space consistency
 }
