--- a/client/src/App/components/forms/forms.scss
+++ b/client/src/App/components/forms/forms.scss
@@ -6,7 +6,7 @@
     flex-flow: column nowrap;
 
     width: 80vw;
-    margin: 2rem auto;
+    margin: auto;
 
     justify-content: center;
     align-items: center;
